# combinatorial_optimization_solver

./: .gitignore  Cargo.toml  README.md  research.yml
dataset/: .ch150.opt.tour.swp
dataset/knapsack/: knap_custom.csv
dataset/knapsack/instances_01_KP/low-dimensional/: f10_l-d_kp_20_879  f1_l-d_kp_10_269  f2_l-d_kp_20_878  f3_l-d_kp_4_20  f4_l-d_kp_4_11  f5_l-d_kp_15_375  f6_l-d_kp_10_60  f7_l-d_kp_7_50  f8_l-d_kp_23_10000  f9_l-d_kp_5_80
dataset/knapsack/smallcoeff_pisinger/: knap_custom.csv
dataset/tsp/: bayg29.tsp  ulysses16.opt.tour
py_src/: d-wave.ipynb  d-wave_BACKUP_582.ipynb  d-wave_BACKUP_765.ipynb  d-wave_BACKUP_937.ipynb  d-wave_LOCAL_582.ipynb  d-wave_REMOTE_937.ipynb  load_dataset.py  main.py  pretest.py  rbm.py
py_src/load_dataset/: Cargo.toml  pyproject.toml
py_src/load_dataset/src/: lib.rs
src/: annealing_scheduler.rs  dataset.rs  lib.rs  main.rs  math.rs  model.rs  opt.rs  simulated_annealing.rs  solver.rs  webhook.rs
src/solver/: annealing_scheduler.rs  simulated_annealing.rs  simulated_quantum_annealing.rs
tests/: opt.rs
