[package]
edition = "2018"
name = "combinatorial_optimization_solver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.1"
ndarray = "0.15.3"
ndarray-linalg = {version = "0.14.0", features = ["openblas"]}
ndarray-rand = "0.14.0"
num-traits = "0.2.14"
rand = "0.8.4"
